--- a/3A-40.tex
+++ b/3A-40.tex
@@ -1193,6 +1193,26 @@ En el contexto de un shock de oferta exterior, los bienes importados pasan a ser
 El eje de ordenadas representa el tipo de cambio real indirecto (unidades de bien local por unidades de bien extranjero) o alternativamente, la pérdida de competitividad de la economía nacional respecto a las importaciones extranjeras.
 
 
+\pagebreak
+
+\begin{figure}[!htbp]
+	\psfrag{log_y}[1][][0.5][0]{${\log(y)}$}
+	\psfrag{log_k}[1][][0.5][0]{${\log(k)}$}
+	\psfrag{log_c}[1][][0.5][0]{${\log(c)}$}
+	\psfrag{log_l}[1][][0.5][0]{${\log(l)}$}
+	\psfrag{log_w}[1][][0.5][0]{${\log(w)}$}
+	\psfrag{r}[1][][0.5][0]{${r}$}
+	\psfrag{A}[1][][0.5][0]{${A}$}
+	\centering 
+	\includegraphics[width=0.80\textwidth]{RBCp_IRF_eps_A}
+
+	\label{fig:rbcefectodynareptfpermanente}
+\end{figure}
+\renewcommand{\rgcaptioneq}{\rgcaption{Efecto de un shock de oferta permanente en un modelo del ciclo real básico\footnote{Estimado con modelo RBC\_Baseline.mod de \href{https://github.com/JohannesPfeifer/DSGE_mod}{Repositorio de modelos DSGE en Dynare de Johannes Pfeifer.}}.}}
+\begin{center}
+\rgcaptioneq
+\end{center}
+
 
 \begin{figure}[!htbp]
 	\psfrag{log_y}[1][][0.5][0]{${\log(y)}$}
@@ -1212,23 +1232,8 @@ El eje de ordenadas representa el tipo de cambio real indirecto (unidades de bie
 	\rgcaptioneq
 \end{center}
 
-\begin{figure}[!htbp]
-	\psfrag{log_y}[1][][0.5][0]{${\log(y)}$}
-	\psfrag{log_k}[1][][0.5][0]{${\log(k)}$}
-	\psfrag{log_c}[1][][0.5][0]{${\log(c)}$}
-	\psfrag{log_l}[1][][0.5][0]{${\log(l)}$}
-	\psfrag{log_w}[1][][0.5][0]{${\log(w)}$}
-	\psfrag{r}[1][][0.5][0]{${r}$}
-	\psfrag{A}[1][][0.5][0]{${A}$}
-	\centering 
-	\includegraphics[width=0.80\textwidth]{RBCp_IRF_eps_A}
 
-	\label{fig:rbcefectodynareptfpermanente}
-\end{figure}
-\renewcommand{\rgcaptioneq}{\rgcaption{Efecto de un shock de oferta permanente en un modelo del ciclo real básico\footnote{Estimado con modelo RBC\_Baseline.mod de \href{https://github.com/JohannesPfeifer/DSGE_mod}{Repositorio de modelos DSGE en Dynare de Johannes Pfeifer.}}.}}
-\begin{center}
-\rgcaptioneq
-\end{center}
+
 %\pagebreak
 
 %\begin{tabla}{Representación gráfica de los efectos de un shock de oferta positivo en un modelo del ciclo real simple calibrado para la economía americana en las últimas décadas.}{rbcshockprod}
