--- a/3B-13.tex
+++ b/3B-13.tex
@@ -1150,9 +1150,9 @@
 				\4[] $\text{PII}_t - \text{PII}_{t-1} = \text{CNF}^*_t + i_t^A \cdot A_{t-1} - i_t^P\cdot P_{t-1} + OC_t $
 				\4[] $\text{PII}_t = \text{CNF}^*_t + (1+i) \text{PII}_{t-1} + OC_t$
 				\4[] $\to$ Dividiendo entre $y_t = (1+g) y_{t-1}$
-				\4[] \fbox{$\text{pii}_t = \text{cnf}^*_t + \frac{1+i}{1+g}\text{pii}_{t-1} + \text{oc}_t$}
+				\4[] \fbox{$\text{pii}_t = \text{cnf}^*_t + \frac{1+r}{1+g}\text{pii}_{t-1} + \text{oc}_t$}
 				\4[] $\to$ Estado estacionario: $\text{pii}_t = \text{pii}_{t+1} = \text{pii}_{t-1}$
-				\4[] \fbox{$\text{cnf}^* = \frac{g-i}{1+g}\text{pii} + \text{oc}_t$}
+				\4[] \fbox{$\text{cnf}^* = \frac{g-r}{1+g}\text{pii} + \text{oc}_t$}
 			\3 Implicaciones
 				\4[] Asumiendo:
 				\4[] $\to$ Sin efectos de valoración y volumen ($\text{oc}_t=0$)
@@ -1160,18 +1160,18 @@
 				\4[] $\then$ $\text{CNF}^*$ es balanza comercial
 				\4 Crecimiento del PIBn mayor a interés
 				\4[] $\text{CNF}^*$ puede ser < 0
-				\4[] $\to$ Hasta igualar $-\text{pii} \cdot \frac{g-i}{1+g}$
+				\4[] $\to$ Hasta igualar $-\text{pii} \cdot \frac{g-r}{1+g}$
 				\4[] $\to$ Deuda sostenible aun con déficit comercial
 				\4[] $\to$ Interpretable como I más rentable que deuda
 				\4 Crecimiento del PIB menor que interés
 				\4[] $\text{CNF}^*$ <0 sólo sostenible si:
 				\4[] $\to$ $\text{pii}_t > 0$
 				\4[] $\then$ Déficit sólo sostenible si economía acreedora
-				\4[] $\then$ Déficit sostenible hasta límite $\text{pii}\cdot \frac{g-i}{1+g}$
+				\4[] $\then$ Déficit sostenible hasta límite $\text{pii}\cdot \frac{g-r}{1+g}$
 				\4[] $\to$ Interpretable como I menos rentable que deuda
 				\4[$\then$] Deseable $\text{CNF}^*$ superior a umbral para evitar ajustes
 				\4 Efectos del volumen de deuda
-				\4[] Si $g<i$ y deuda muy elevada:
+				\4[] Si $g<r$ y deuda muy elevada:
 				\4[] $\to$ $\text{cnf}^*$ deberá ser muy grande
 				\4[] $\then$ Aumenta esfuerzo exigido
 				\4[] $\then$ Más probable impago de la deuda
