--- a/3A-42.tex
+++ b/3A-42.tex
@@ -270,7 +270,7 @@ El modelo de Ramsey-Cass-Koopmans endogeneiza esa tasa de ahorro de tal manera q
 				\4[] $\then$ $\frac{d \, I}{I} = \frac{d \, K}{K} = \frac{s}{v}$
 			\3 Crecimiento del empleo
 				\4 Oferta de trabajo crece a tasa exógena $n$
-				\4[] $\dv{L}{t} = n$
+				\4[] $\frac{d \, L}{L} = n$
 			\3 Equilibrio de largo plazo
 				\4 Requiere mantener constantes:
 				\4[] $\to$ Intensidad de capital en producción $\frac{K}{Y}$
