--- a/3A-6.tex
+++ b/3A-6.tex
@@ -553,7 +553,7 @@ La agregación de Engel puede expresarse tanto en términos de gasto absoluto co
 
 Una relación de preferencias $\succsim$ es cuasilineal en el bien 1 si dados $\forall x, y \in X, \; e_1 = (1,0,...,0) \in X$, se cumple que: $x \sim y \iff x + \alpha e_1 \sim y + \alpha e_1 \forall \, \alpha \in \mathbb{R}$. Cuando esto sucede, y la $\succsim$ es además completa, transitiva y continua de manera que existe una función de utilidad $u: X \to \mathbb{R}$ que la representa, la función de utilidad es lineal en el bien 1, de tal manera que toma la forma $u(\vec{x}) =  g(\vec{x}_{-1}) + x_1$. Una función de utilidad con esta forma induce curvas de indiferencia que se pueden desplazar paralelas al eje del bien 1 simplemente aumentando la cuantía consumida de este bien.
 
-En funciones de utilidad con esta característica de linealidad en el bien 1, si el bien 1 es el numerario, de manera que la renta está expresada en términos del bien 1, se cumple que los bienes no sufren efecto renta. Es decir, la demanda del resto de los bienes no depende de la renta siempre que la renta sea suficiente para adquirir la cantidad demandada total del resto de los bienes. Este resultado tiene implicaciones a la hora de calcular el excedente del consumidor, ya que en este caso, el excedente marshalliano sí será una medida válida del excedente porque coincidirá exactamente con la variación compensatoria y la variación equivalente, al ser iguales la demanda marshalliana y la demanda compensada o hicksiana. Asimismo, la ausencia de efectos renta tiene especial utilidad en los modelos de equilibrio parcial, ya que la demanda del bien no numerario no depende ni de la renta global, ni del consumo de numerario y es exclusivamente función del precio del bien en cuestión. Del problema de maximización de la utilidad:
+En funciones de utilidad con esta característica de linealidad en el bien 1, si el bien 1 es el numerario, de manera que la renta está expresada en términos del bien 1, se cumple que los bienes no sufren efecto renta. Es decir, la demanda del resto de los bienes no depende de la renta siempre que la renta sea suficiente para adquirir la cantidad demandada total del resto de los bienes. Este resultado tiene implicaciones a la hora de calcular el excedente del consumidor, ya que en este caso, el excedente marshalliano sí será una medida válida del excedente porque coincidirá exactamente con la variación compensatoria y la variación equivalente. Asimismo, la ausencia de efectos renta tiene especial utilidad en los modelos de equilibrio parcial, ya que la demanda del bien no numerario no depende ni de la renta global, ni del consumo de numerario y es exclusivamente función del precio del bien en cuestión. Del problema de maximización de la utilidad:
 
 \begin{align*}
 	 \max \quad u(x,m) = \phi(x) + m & \\
