--- a/3B-24.tex
+++ b/3B-24.tex
@@ -1176,7 +1176,7 @@ Ley aprobada en 2002 en Estados Unidos como resultado de una serie de escándalo
 
 El procedimiento de subasta en los mercados de renta fija pública en España es habitualmente el de subasta holandesa (competitiva)
 
-Posible añadir una cuarta parte separada de la tercera que trate exclusivamente los cambios regulatorios post crisis, los dilemas de política económica (más regulación implica menos crédito? menos regulación implica más posibilidad de crisis?).
+Posible añadir una cuarta parte separada de la tercera que trate exclusivamente los cambios regulatorios que afectan a los mercados financieros internacionales post crisis, los dilemas de política económica (más regulación implica menos crédito? menos regulación implica más posibilidad de crisis?).
 
 
 \bibliografia
