--- a/3B-3.tex
+++ b/3B-3.tex
@@ -798,7 +798,7 @@ En el modelo de Modigliani-Miller, el coste del equity varía de tal forma que e
 
 \conceptos
 
-\concepto{Financiación externa-interna y ajena-propia} Existe cierto grado de confusión en relación a la emisión de acciones. CECO Viejo considera las ampliaciones de capital como financiación ajena, mientras que CECO Nuevo la considera propia. CECO Viejo es incorrecto, porque está confundiendo financiación externa con financiación ajena. La emisión de acciones es sin duda financiación externa, pero no es financiación ajena sino propia porque contribuye a los fondos propios.
+\concepto{Financiación externa-interna y ajena-propia} Existe cierto grado de confusión en relación a la emisión de acciones. La emisión de acciones es sin duda financiación externa, pero no es financiación ajena sino propia porque contribuye a los fondos propios.
 
 \preguntas
 
